tests/baselines/reference/parameterPropertyOutsideConstructor.errors.txt
==== tests/cases/compiler/parameterPropertyOutsideConstructor.ts (1 errors) ====
    class C {
        foo(public x) {
            ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        }
    }